--- a/app/src/main/res/layout/reminderdesign.xml
+++ b/app/src/main/res/layout/reminderdesign.xml
@@ -18,7 +18,7 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/noMovieSignReminder"
+        android:id="@+id/noMovieSignRem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
