--- a/app/src/main/res/layout/registerscreendesign.xml
+++ b/app/src/main/res/layout/registerscreendesign.xml
@@ -1,81 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@drawable/spidermanbgblur"
     android:gravity="center">
 
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:background="@drawable/cinemind_test_logo"/>
-        <TextView
-            android:layout_marginTop="150dp"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:textColor="@color/colorPrimary"
-            android:gravity="center"
-            android:text="SIGN UP"
-            android:textSize="27dp" />
-    </RelativeLayout>
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:gravity="center">
 
-        <EditText
-            android:id="@+id/emailRegisterText"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:textSize="16dp"
-            android:textColor="#484848"
-            android:hint="EMAIL"
-            android:textColorHint="#a3a3a3" />
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/passwordRegisterText"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:textSize="16dp"
-            android:textColor="#484848"
-            android:gravity="center"
-            android:hint="PASSWORD"
-            android:textColorHint="#a3a3a3"
-            android:inputType="textPassword"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:text="SIGN UP"
+                android:textSize="30dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginTop="15dp"
+                android:text="EMAIL ADDRESS"/>
+            <EditText
+                android:id="@+id/emailRegisterText"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textSize="16dp"
+                android:textColor="#ffffff"
+                android:hint="example@mail.com"
+                android:textColorHint="#b6b6b6"
+                android:theme="@style/MyEditTextTheme"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginTop="15dp"
+                android:text="PASSWORD"/>
+            <EditText
+                android:id="@+id/passwordRegisterText"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textSize="16dp"
+                android:textColor="#ffffff"
+                android:hint="*********"
+                android:textColorHint="#b6b6b6"
+                android:inputType="textPassword"
+                android:theme="@style/MyEditTextTheme"/>
+
+            <Button
+                android:id="@+id/signUpButtonReg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/white"
+                android:text="SIGN UP"
+                android:background="@drawable/redbutton"/>
 
 
 
-        <Button
-            android:id="@+id/signUpButtonReg"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/white"
-            android:text="SIGN UP"
-            android:background="#cc594d"/>
 
-        <Button
-            android:id="@+id/signInButtonReg"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#ffffff"
-            android:textSize="10dp"
-            android:text="ALREADY HAVE AND ACCOUNT? SIGN IN HERE"
-            android:background="#2a96cc"/>
-
-
-
+        </LinearLayout>
     </LinearLayout>
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true">
+    <Button
+        android:id="@+id/signInButtonReg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:textColor="#ffffff"
+        android:textSize="10dp"
+        android:text="ALREADY HAVE AND ACCOUNT? SIGN IN HERE"
+        android:background="#77000000"/>
+</RelativeLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
