--- a/app/src/main/res/layout/soonpagedesign.xml
+++ b/app/src/main/res/layout/soonpagedesign.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -21,5 +21,20 @@
         android:id="@+id/soonListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="1dp"/>
+
+    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignBottom="@+id/soonListView">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Load More"
+            android:background="#00000000"
+            android:textColor="@color/colorPrimaryDark"/>
+    </LinearLayout>
+    -->
 </RelativeLayout>
